--- a/DjvuApp/DjvuApp.WindowsPhone.csproj
+++ b/DjvuApp/DjvuApp.WindowsPhone.csproj
@@ -83,9 +83,6 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <Content Include="Assets\FileTypeLogo.png" />
-    <Content Include="kletenik.djvu" />
-    <Content Include="strategikon.djvu" />
-    <Content Include="test.djvu" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -102,14 +99,16 @@
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="Controls\DocumentViewer.cs" />
+    <Compile Include="Dialogs\JumpToPageDialog.cs" />
     <Compile Include="Dialogs\OutlineDialog.cs" />
+    <Compile Include="Dialogs\RenameDialog.cs" />
     <Compile Include="Model\Books\DataContractBookProvider.cs" />
     <Compile Include="Model\Books\DjvuDocumentException.cs" />
     <Compile Include="Model\Books\DocumentTypeNotSupportedException.cs" />
     <Compile Include="Model\Books\IBook.cs" />
     <Compile Include="Model\Books\IBookProvider.cs" />
-    <Compile Include="Dialogs\JumpToPageDialog.xaml.cs">
-      <DependentUpon>JumpToPageDialog.xaml</DependentUpon>
+    <Compile Include="Dialogs\JumpToPageDialogInternal.xaml.cs">
+      <DependentUpon>JumpToPageDialogInternal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Books\SqliteBookProvider.cs" />
     <Compile Include="Model\Outline\FakeOutlineItem.cs" />
@@ -124,8 +123,8 @@
     <Compile Include="Common\OnNavigatedToMessage.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Dialogs\RenameDialog.xaml.cs">
-      <DependentUpon>RenameDialog.xaml</DependentUpon>
+    <Compile Include="Dialogs\RenameDialogInternal.xaml.cs">
+      <DependentUpon>RenameDialogInternal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\ViewerPage.xaml.cs">
       <DependentUpon>ViewerPage.xaml</DependentUpon>
@@ -150,14 +149,13 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
-    <Content Include="Common\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Dialogs\JumpToPageDialog.xaml">
+    <Page Include="Dialogs\JumpToPageDialogInternal.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -169,7 +167,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Dialogs\RenameDialog.xaml">
+    <Page Include="Dialogs\RenameDialogInternal.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
